// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. block 1`] = `
<div>
  Some text is here 
  <div>
    and there is some 
    <div>
      more text 
      <span>
        and in here
      </span>
    </div>
     after it too
  </div>
   and here
</div>
`;

exports[`2. bold 1`] = `
<b>
  some text here
</b>
`;

exports[`3. break 1`] = `<br />`;

exports[`4. emphasis 1`] = `
<em>
  some emphasised text here
</em>
`;

exports[`5. image tag 1`] = `
<div
  className="css-view-1dbjc4n"
/>
`;

exports[`6. inline 1`] = `
<span>
  some other text here
</span>
`;

exports[`7. italic 1`] = `
<i>
   some more text here
</i>
`;

exports[`8. paragraph 1`] = `
<p>
  This is the text for paragraph one
</p>
`;

exports[`9. strong 1`] = `
<strong>
  some strong text here
</strong>
`;

exports[`10. subscript 1`] = `
<sub>
  2
</sub>
`;

exports[`11. subscript with fallback 1`] = `
<sub>
  without unicode support
</sub>
`;

exports[`12. superscript 1`] = `
<sup>
  2
</sup>
`;

exports[`13. superscript with fallback 1`] = `
<sup>
  without unicode support
</sup>
`;

exports[`14. does not render a script tag 1`] = `
<div
  className="css-view-1dbjc4n"
/>
`;
